--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>project_kkbox</title>
+    <title>Pocast Player</title>
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.6.8/plyr.css" />
   </head>
   <body>
-    <div id="app"></div>
+    
+    <div id="app">
+    </div>
     <script src="/dist/build.js"></script>
   </body>
 </html>
